<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.view.AddEditGameFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/CompleteToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:titleCentered="true"
        app:titleMargin="16dp">

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            ads:cardBackgroundColor="@color/black">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addEditGameB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/addEditGameContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/gameCoverChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/game_cover"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/gameCover"
                        android:layout_width="120dp"
                        android:layout_height="160dp"
                        android:src="@drawable/game_cover_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:padding="4dp"
                        android:src="@drawable/ic_edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="ContentDescription" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gameTitleET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/game_title"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gameCoverChange"
                app:layout_constraintTop_toTopOf="@+id/gameCoverChange"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/gameStatusT"
                app:layout_constraintEnd_toEndOf="@+id/gameTitleET"
                app:layout_constraintStart_toStartOf="@+id/gameTitleET"
                app:layout_constraintTop_toBottomOf="@+id/gameTitleET" />

            <TextView
                android:id="@+id/gameStatusT"
                style="@style/GameStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/game_status"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/gameTitleET"
                app:layout_constraintStart_toStartOf="@+id/gameTitleET" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/gameCoverChange"
                app:layout_constraintEnd_toEndOf="@+id/gameTitleET"
                app:layout_constraintStart_toStartOf="@+id/gameTitleET">

                <TextView
                    android:id="@+id/wantB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/want"
                    android:textAlignment="center"
                    android:textColor="@color/game_status"
                    app:drawableTopCompat="@drawable/ic_want" />

                <TextView
                    android:id="@+id/playingB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/playing"
                    android:textAlignment="center"
                    android:textColor="@color/game_status"
                    app:drawableTopCompat="@drawable/ic_controller" />

                <TextView
                    android:id="@+id/playedB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/played"
                    android:textAlignment="center"
                    android:textColor="@color/game_status"
                    app:drawableTopCompat="@drawable/ic_played" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gameDescriptionET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/game_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textAllCaps="false"
                android:textColorHint="#757575"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameCoverChange"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/gameScoreT"
                app:layout_constraintEnd_toEndOf="@+id/gameDescriptionET"
                app:layout_constraintStart_toStartOf="@+id/gameDescriptionET"
                app:layout_constraintTop_toBottomOf="@+id/gameDescriptionET" />

            <TextView
                android:id="@+id/gameScoreT"
                style="@style/GameStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/game_score"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameDescriptionET" />

            <androidx.cardview.widget.CardView
                android:id="@+id/gameScoreChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/gameReviewT"
                app:layout_constraintEnd_toEndOf="@+id/gameScoreT"
                app:layout_constraintStart_toStartOf="@+id/gameScoreT"
                app:layout_constraintTop_toBottomOf="@+id/gameScoreT">

                <TextView
                    android:id="@+id/scoreT"
                    android:layout_width="90dp"
                    android:layout_height="120dp"
                    android:background="@color/cover_background"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:padding="4dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/platformsT"
                style="@style/GameStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/platforms"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gameScoreT"
                app:layout_constraintTop_toBottomOf="@+id/gameDescriptionET" />

            <Button
                android:id="@+id/selectPlatformsB"
                style="@style/ButtonColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_platforms"
                app:layout_constraintEnd_toEndOf="@+id/platformsT"
                app:layout_constraintStart_toStartOf="@+id/platformsT"
                app:layout_constraintTop_toBottomOf="@+id/platformsT" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/gameScoreChange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gameScoreChange"
                app:layout_constraintTop_toBottomOf="@+id/selectPlatformsB">

                <ImageView
                    android:id="@+id/pcIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/computer_icon"
                    android:src="@drawable/ic_pc"
                    android:visibility="gone"
                    app:tint="@color/game_status" />

                <ImageView
                    android:id="@+id/xboxIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/xbox_icon"
                    android:src="@drawable/ic_xbox"
                    android:visibility="gone"
                    app:tint="@color/game_status" />

                <ImageView
                    android:id="@+id/playstationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/playstation_icon"
                    android:src="@drawable/ic_playstation"
                    android:visibility="gone"
                    app:tint="@color/game_status" />

                <ImageView
                    android:id="@+id/nintendoIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/nintendo_icon"
                    android:src="@drawable/ic_nintendo"
                    android:visibility="gone"
                    app:tint="@color/game_status" />

                <ImageView
                    android:id="@+id/mobileIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/mobile_icon"
                    android:src="@drawable/ic_mobile"
                    android:visibility="gone"
                    app:tint="@color/game_status" />
            </LinearLayout>

            <TextView
                android:id="@+id/gameReviewT"
                style="@style/GameStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/game_review"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/gameReviewET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gameReviewET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/write_game_review"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>